# manic-browser

./: AUTHORS  configure.in
src/: Makefile.am  manic.cpp
themes/: themes_oitheme.edj
